--- a/index.Rmd
+++ b/index.Rmd
@@ -10,3 +10,5 @@ Below will be my three deliverables.
 [`Portfolio 1`](https://vthao9.github.io/portfolio/portfolio1)
 [`Portfolio 2`](https://vthao9.github.io/portfolio/portfolio2)
 [`Portfolio 3`](https://vthao9.github.io/portfolio/portfolio3)
+
+This portfolio is about a dataset on legal and illegal drugs. The dataset was surveyed on 1885 respondent to see if they have taken any of these hard drugs.
