--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ output:
 Landing page for my portfolio.
 Below will be my three deliverables.
 
-[`Portfolio 1`](https://vthao9.github.io/portfolio/portfolio1)
+[`Portfolio 1`](https://vthao9.github.io/portfolio/portfolio)
 [`Portfolio 2`](https://vthao9.github.io/portfolio/portfolio2)
 [`Portfolio 3`](https://vthao9.github.io/portfolio/portfolio3)
 
